RESOLVED FIXED115760
Fix memory leak after r149692
https://bugs.webkit.org/show_bug.cgi?id=115760
Summary Fix memory leak after r149692
Alex Christensen
Reported 2013-05-07 14:51:48 PDT
https://bugs.webkit.org/show_bug.cgi?id=42324 introduced a memory leak. I fixed this leak by using RetainPtr<WKDataRef> instead of just WKDataRef. I also added UNUSED_PARAM macros for non-cf builds.
Attachments
Patch (1.73 KB, patch)
2013-05-07 14:56 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2013-05-07 14:56:21 PDT
Tim Horton
Comment 2 2013-05-07 14:59:43 PDT
Comment on attachment 200981 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=200981&action=review > Tools/ChangeLog:3 > + fixed a memory leak introduced by bug 42324 by using a RetainPtr Probably should have been capitalized and probably reference the revision and not the bug.
WebKit Commit Bot
Comment 3 2013-05-07 15:25:29 PDT
Comment on attachment 200981 [details] Patch Clearing flags on attachment: 200981 Committed r149697: <http://trac.webkit.org/changeset/149697>
WebKit Commit Bot
Comment 4 2013-05-07 15:25:31 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 5 2013-05-07 18:32:57 PDT
Comment on attachment 200981 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=200981&action=review > Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:848 > + RetainPtr<WKDataRef> wkData = WKBundleFrameCopyWebArchive(frame); This doesn’t fix the leak. You need to call adoptCF to fix the leak.
Mark Rowe (bdash)
Comment 6 2013-05-07 23:43:09 PDT
It was fixed properly under bug 115766.
Note You need to log in before you can comment on or make changes to this bug.