fixed a memory leak introduced by bug 42324 by using a RetainPtr https://bugs.webkit.org/show_bug.cgi?id=115760

Patch by Alex Christensen <achristensen@apple.com> on 2013-05-07
Reviewed by Tim Horton.

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::dumpDOMAsWebArchive):
fixed memory leak, added UNUSED_PARAM macros

Canonical link: https://commits.webkit.org/134158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149697 268f45cc-cd09-0410-ab3c-d52691b4dbfc